--- a/index.html
+++ b/index.html
@@ -104,7 +104,81 @@
            <button class="s-button">Read more</button>     </div>
             </div>
           </div>
+          <div id="choose-us">
+            <div class="choose-icon">
+              <i class="fas fa-ellipsis-h"></i>
+              <h1>Reasons to choose us</h1>
+            </div>
+            <div class="choose-list">
+              <div class="ch ch-1"><h3>Affordable price</h3></div>
+              <div class="ch ch-2"><h3>Quality job</h3></div>
+              <div class="ch ch-3"><h3>Experienced staffs</h3></div>
+              <div class="ch ch-4"><h3>Punctual</h3></div>
+              <div class="ch ch-5"><h3>Punctual</h3></div>
+            </div>
+          </div>
+          <div id="extra">
+            <div class="question">
+              <div class="q-icon">
+                <i class="fas fa-phone-volume"></i>
+                <i class="fas fa-ellipsis-h"></i>
+              </div>
+              <div class="q-desc">
+                <h1>DO YOU HAVE A QUESTION?</h1>
+                <p>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</p>
+                <button class="q-button">Contact us</button>
+
+              </div>
+            </div>
+            <div class="job">
+              <div class="j-icon">
+                <i class="fas fa-search-plus"></i>
+                <i class="fas fa-ellipsis-h"></i>
+              </div>
+              <div class="j-desc">
+                <h1>CAREER OPPURTUNITIES</h1>
+                <p>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</p>
+                <button class="j-button">More about jobs</button>
+              </div>
+            </div>
+          </div>
         </main>
+        <footer>
+          <div id="footer-h">
+          <div class="f-imgdesc">
+            <div class="f-logo">
+    <img src="/public/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
+            </div>
+            <div class="f-desc">
+              <h3>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</h3>
+            </div>
+          </div>
+          <div class="f-contact">
+            <div class="f-icon">
+              <i class="fas fa-ellipsis-h"></i>
+              <h1>CONTATCT</h1>
+            </div>
+            <div class="f-cdesc">
+                  <h3>+45 123456</h3>
+                  <h3>123@gmail.com</h3>
+                  <h3>Norrebro, Copenhagen</h3>
+                  <h3>CVRno. -----</h3>
+            </div>
+          </div>
+          <div class="f-offer">
+            <div class="f-icon">
+              <i class="fas fa-ellipsis-h"></i>
+              <h1>Our services</h1>
+            </div>
+            <div class="f-odesc">
+              <h3>Dishwahers</h3>
+              <h3>Dishwahers</h3>
+              <h3>Dishwahers</h3>
+              <h3>Dishwahers</h3>
+            </div>
+          </div>
+        </div>
+        </footer>
         
           </div>
       
