service page done contact page started

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="fas fa-bars mobile-menu-btn"></i>
             <ul class="mobile-menu slide-out display-none">
                 <li><a href="#">Home</a></li>
-                <li> <a href="#">Service</a></li>
+                <li> <a href="service.html">Service</a></li>
                 <li><a href="#">Job</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">contact</a></li>
@@ -36,7 +36,7 @@
               <div class="nav-right">
                 <ul class="desktop-menu">
                   <li><a href="#">Home</a></li>
-                  <li> <a href="#">Service</a></li>
+                  <li> <a href="service.html">Service</a></li>
                   <li><a href="#">Job</a></li>
                   <li><a href="#">About us</a></li>
                   <li><a href="#">contact</a></li>
