form validation and restdb database done

--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,77 @@
             </div>
           </nav>
     </header>
+
+    <main>
+        <h1 class="c-heading">CONTATCT</h1>
+        <div id="contact-info">
+            <div class="c-desc"><h2>Feel free to contatc us if you have any questions.You can fill up this form to get in touch with us</h2></div>
+            <div class="c-form">
+                <h1>CONTACT FORM</h1>
+                <form id="form-c">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input id="name" type="text" name="name" required />
+                        <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="number">Number</label>
+                        <input id="number" type="number" name="number" />
+                        <!-- <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span> -->
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" required />
+                        <span id="error-2" class="error hidden">Email is required. Please, enter your name.</span>
+                    </div>
+                    <div class="form-group">
+                        <label for="desc">Description</label>
+                        <input id="desc" type="text" name="desc"  />
+                        <!-- <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span> -->
+                    </div>
+                    <button id="submit" class="c-btn">Submit</button>
+                </form>
+            </div>
+            </div>
+
+       
+    </main>
+    <footer>
+        <div id="footer-h">
+        <div class="f-imgdesc">
+          <div class="f-logo">
+  <img src="/public/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
+          </div>
+          <div class="f-desc">
+            <h3>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</h3>
+          </div>
+        </div>
+        <div class="f-contact">
+          <div class="f-icon">
+            <i class="fas fa-ellipsis-h"></i>
+            <h1>CONTATCT</h1>
+          </div>
+          <div class="f-cdesc">
+                <h3>+45 123456</h3>
+                <h3>123@gmail.com</h3>
+                <h3>Norrebro, Copenhagen</h3>
+                <h3>CVRno. -----</h3>
+          </div>
+        </div>
+        <div class="f-offer">
+          <div class="f-icon">
+            <i class="fas fa-ellipsis-h"></i>
+            <h1>Our services</h1>
+          </div>
+          <div class="f-odesc">
+            <h3>Dishwahers</h3>
+            <h3>Dishwahers</h3>
+            <h3>Dishwahers</h3>
+            <h3>Dishwahers</h3>
+          </div>
+        </div>
+      </div>
+      </footer>
 </body>
 <script type="module" src="/main.js"></script>
 </html>
