--- a/service.html
+++ b/service.html
@@ -22,7 +22,7 @@
                 <li> <a href="service.html">Service</a></li>
                 <li><a href="#">Job</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="contact.html">contact</a></li>
        <li>       <button class="button_nav">Button</button></li>
             </ul>
           </div>
@@ -37,7 +37,7 @@
                   <li> <a href="service.html">Service</a></li>
                   <li><a href="#">Job</a></li>
                   <li><a href="#">About us</a></li>
-                  <li><a href="#">contact</a></li>
+                  <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
                 </ul>
               </div>
