--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
             <ul class="mobile-menu slide-out display-none">
                 <li><a href="index.html">Home</a></li>
                 <li> <a href="service.html">Service</a></li>
-                <li><a href="#">Job</a></li>
+                <li><a href="job.html">Job</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="contact.html">contact</a></li>
        <li>       <button class="button_nav">Button</button></li>
@@ -35,7 +35,7 @@
                 <ul class="desktop-menu">
                   <li><a href="index.html">Home</a></li>
                   <li> <a href="service.html">Service</a></li>
-                  <li><a href="#">Job</a></li>
+                  <li><a href="job.html">Job</a></li>
                   <li><a href="#">About us</a></li>
                   <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
@@ -141,5 +141,5 @@
       </footer>
       
 </body>
-<script type="module" src="/main.js"></script>
+<script type="module" src="/navi.js"></script>
 </html>
