--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="mobile-menu slide-out display-none">
                 <li><a href="#">Home</a></li>
                 <li> <a href="service.html">Service</a></li>
-                <li><a href="#">Job</a></li>
+                <li><a href="job.html">Job</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="contact.html">contact</a></li>
        <li>       <button class="button_nav">Button</button></li>
@@ -37,7 +37,7 @@
                 <ul class="desktop-menu">
                   <li><a href="#">Home</a></li>
                   <li> <a href="service.html">Service</a></li>
-                  <li><a href="#">Job</a></li>
+                  <li><a href="job.html">Job</a></li>
                   <li><a href="#">About us</a></li>
                   <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
@@ -186,6 +186,6 @@
     
     
    
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/navi.js"></script>
   </body>
 </html>
