--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                         <input id="desc" type="text" name="desc"  />
                         <!-- <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span> -->
                     </div>
-                    <button id="submit" class="c-btn">Submit</button>
+                    <button id="c-submit" class="c-btn">Submit</button>
                 </form>
             </div>
             </div>
