vite upload test

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                   <li> <a href="service.html">Service</a></li>
                   <li><a href="job.html">Job</a></li>
                   <li><a href="#">About us</a></li>
-                  <li><a href="#">contact</a></li>
+                  <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
                 </ul>
               </div>
@@ -83,7 +83,7 @@
         <div id="footer-h">
         <div class="f-imgdesc">
           <div class="f-logo">
-  <img src="/public/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
+  <img src="/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
           </div>
           <div class="f-desc">
             <h3>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</h3>
