--- a/job.html
+++ b/job.html
@@ -47,7 +47,7 @@
     <main>
         <h1 class="j-heading">JOB</h1>
         <div id="job-desc">
-            <div class="j-img"><img src="/public/team2.png" alt="" srcset="">  </div>
+            <div class="j-img"><img src="/team2.png" alt="" srcset="">  </div>
             <div class="j-info"><h1>Do you want to join us?</h1>
             <p>Be a part of our team and work with us.We provide good salary with flexible working times and good working enviroment.</p>
         <p>If you are interested, please fill out the below form </p>
