--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p>We are a service oriented company,dedicated to serve our customers and are committed to maintain our quality of standards to thoroughly meet your demand at every single time.</p>
             </div>
             <div class="intro-img">
-              <img src="/public/bg.png" alt="" srcset="">
+              <img src="/bg.png" alt="" srcset="">
             </div>
             </div>
         </header>
@@ -65,7 +65,7 @@
             <div class="service-list">
               <div class="s1">
                 <div class="s-img">
-                  <img src="/public/c.jpg" alt="" srcset="">
+                  <img src="/c.jpg" alt="" srcset="">
                 </div>
                 <div class="s-desc">
                   <h2>Cleaner</h2>
@@ -76,7 +76,7 @@
               </div>
               <div class="s2">
                 <div class="s-img">
-                  <img src="/public/c.jpg" alt="" srcset="">
+                  <img src="/c.jpg" alt="" srcset="">
                 </div>
                 <div class="s-desc">
                   <h2>Cleaner</h2>
@@ -86,7 +86,7 @@
               </div>
               <div class="s3">
                 <div class="s-img">
-                  <img src="/public/c.jpg" alt="" srcset="">
+                  <img src="/c.jpg" alt="" srcset="">
                 </div>
                 <div class="s-desc">
                   <h2>Cleaner</h2>
@@ -96,7 +96,7 @@
               </div>
               <div class="s4">
                 <div class="s-img">
-                  <img src="/public/c.jpg" alt="" srcset="">
+                  <img src="/c.jpg" alt="" srcset="">
                 </div>
                 <div class="s-desc"><h2>Cleaner</h2>
                   <p>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</p></div>
@@ -147,7 +147,7 @@
           <div id="footer-h">
           <div class="f-imgdesc">
             <div class="f-logo">
-    <img src="/public/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
+    <img src="/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
             </div>
             <div class="f-desc">
               <h3>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</h3>
