--- a/job.html
+++ b/job.html
@@ -20,10 +20,10 @@
             <ul class="mobile-menu slide-out display-none">
                 <li><a href="index.html">Home</a></li>
                 <li> <a href="service.html">Service</a></li>
-                <li><a href="#">Job</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="#" class="active">Job</a></li>
+                <li><a href="about.html">About us</a></li>
                 <li><a href="contact.html">contact</a></li>
-       <li>       <button class="button_nav">Button</button></li>
+       
             </ul>
           </div>
           <nav>
@@ -35,8 +35,8 @@
                 <ul class="desktop-menu">
                   <li><a href="index.html">Home</a></li>
                   <li> <a href="service.html">Service</a></li>
-                  <li><a href="#">Job</a></li>
-                  <li><a href="#">About us</a></li>
+                  <li><a href="#" class="active">Job</a></li>
+                  <li><a href="about.html">About us</a></li>
                   <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
                 </ul>
@@ -112,6 +112,7 @@
                 </div>
         </div>
     </main>
+    
 </body>
 <script type="module" src="/jobform.js"></script>
 <script type="module" src="/navi.js"></script>
