--- a/service.html
+++ b/service.html
@@ -19,11 +19,11 @@
             <i class="fas fa-bars mobile-menu-btn"></i>
             <ul class="mobile-menu slide-out display-none">
                 <li><a href="index.html">Home</a></li>
-                <li> <a href="service.html">Service</a></li>
+                <li> <a href="service.html" class="active">Service</a></li>
                 <li><a href="job.html">Job</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="about.html">About us</a></li>
                 <li><a href="contact.html">contact</a></li>
-       <li>       <button class="button_nav">Button</button></li>
+       
             </ul>
           </div>
           <nav>
@@ -34,9 +34,9 @@
               <div class="nav-right">
                 <ul class="desktop-menu">
                   <li><a href="index.html">Home</a></li>
-                  <li> <a href="service.html">Service</a></li>
+                  <li> <a href="service.html" class="active">Service</a></li>
                   <li><a href="job.html">Job</a></li>
-                  <li><a href="#">About us</a></li>
+                  <li><a href="about.html">About us</a></li>
                   <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
                 </ul>
@@ -49,54 +49,51 @@
     <div id="service-cont">
         <div class="s-1 s-flex">
             <div class="s-img">
-                <img src="/public/c.jpg" alt="" srcset="">
+                <img src="/c.jpg" alt="" srcset="">
             </div>
         <div class="s-desc">
-            <h1>CLeaner</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nihil possimus accusamus deserunt, assumenda fuga exercitationem,
-             quidem suscipit et, minus distinctio aspernatur. Nisi eum,
-              cum magnam maiores neque id velit optio.</p>
-              <button class="s-btn">Contact us</button>
+            <h1>Cleaner</h1>
+        <p>We provide quality cleaning services at an affordable price.
+          We provide cleaning services for hotels, apartments, single room, restaurants and offices.
+          Contact us if you want to know more about our offers.</p>
+              <button class="s-btn"><a href="contact.html" class="s-a">Contact us</a></button>
     </div>
 </div>
         <div class="s-2 s-flex">
             <div class="s-img">
-                <img src="/public/rs.jpg" alt="" srcset="">
+                <img src="/dww.jpeg" alt="" srcset="">
             </div>
         <div class="s-desc">
             <h1>Dish Washer</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nihil possimus accusamus deserunt, assumenda fuga exercitationem,
-             quidem suscipit et, minus distinctio aspernatur. Nisi eum,
-              cum magnam maiores neque id velit optio.</p>
-              <button class="s-btn">Contact us</button>
+        <p>We have been providing dishwashing services all over Copenhagen.We have experinced staffs with years
+          of experience.We provide our dishwashing service at very affordable price.
+          Contact us if you want to know more about our offers.</p>
+              <button class="s-btn"><a href="contact.html" class="s-a">Contact us</a></button>
     </div>
 </div>
         <div class="s-3 s-flex">
             <div class="s-img">
-                <img src="/public/rs.jpg" alt="" srcset="">
+                <img src="/ress.jpeg" alt="" srcset="">
             </div>
         <div class="s-desc">
             <h1>Hotel Service</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nihil possimus accusamus deserunt, assumenda fuga exercitationem,
-             quidem suscipit et, minus distinctio aspernatur. Nisi eum,
-              cum magnam maiores neque id velit optio.</p>
-              <button class="s-btn">Contact us</button>
+        <p>We provide house keeping services for at an adffordable price.We have a team of highly skilled staffs.
+          Contact us if you want to know more about our offers.
+        </p>
+              <button class="s-btn"><a href="contact.html" class="s-a">Contact us</a></button>
     </div>
 </div>
         <div class="s-4 s-flex">
             <div class="s-img">
-                <img src="/public/rs.jpg" alt="" srcset="">
+                <img src="/rs.jpg" alt="" srcset="">
             </div>
         <div class="s-desc">
             <h1>Restaurant Service</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nihil possimus accusamus deserunt, assumenda fuga exercitationem,
-             quidem suscipit et, minus distinctio aspernatur. Nisi eum,
-              cum magnam maiores neque id velit optio.</p>
-              <button class="s-btn">Contact us</button>
+        <p>We have been providing kitchen helper, bartenders, runners and chefs to various restaurants all over Copenhagen
+          at an affordable price.
+          Contact us if you want to know more about our offers.
+        </p>
+              <button class="s-btn"><a href="contact.html" class="s-a">Contact us</a></button>
     </div>
 </div>
     </div>
@@ -119,10 +116,10 @@
             <h1>CONTATCT</h1>
           </div>
           <div class="f-cdesc">
-                <h3>+45 123456</h3>
-                <h3>123@gmail.com</h3>
-                <h3>Norrebro, Copenhagen</h3>
-                <h3>CVRno. -----</h3>
+            <h3>+45 22247478</h3>
+            <h3>info@gsaps.dk</h3>
+            <h3>Frederikssundsvej 272, 2700  Brønshøj</h3>
+            <h3>CVRno. 41896760</h3>
           </div>
         </div>
         <div class="f-offer">
@@ -131,10 +128,10 @@
             <h1>Our services</h1>
           </div>
           <div class="f-odesc">
+            <h3>Cleaner</h3>
             <h3>Dishwahers</h3>
-            <h3>Dishwahers</h3>
-            <h3>Dishwahers</h3>
-            <h3>Dishwahers</h3>
+            <h3>Hotel service</h3>
+            <h3>Restaurant service</h3>
           </div>
         </div>
       </div>
