--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li> <a href="service.html">Service</a></li>
                 <li><a href="job.html">Job</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">contact</a></li>
-       <li>       <button class="button_nav">Button</button></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="#" class="active">contact</a></li>
+      
             </ul>
           </div>
           <nav>
@@ -36,8 +36,8 @@
                   <li><a href="index.html">Home</a></li>
                   <li> <a href="service.html">Service</a></li>
                   <li><a href="job.html">Job</a></li>
-                  <li><a href="#">About us</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                  <li><a href="about.html">About us</a></li>
+                  <li><a href="#" class="active">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
                 </ul>
               </div>
@@ -80,41 +80,41 @@
        
     </main>
     <footer>
-        <div id="footer-h">
-        <div class="f-imgdesc">
-          <div class="f-logo">
-  <img src="/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
-          </div>
-          <div class="f-desc">
-            <h3>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</h3>
-          </div>
+      <div id="footer-h">
+      <div class="f-imgdesc">
+        <div class="f-logo">
+<img src="/GSAPS_NEWLOGOwhite.png" alt="" srcset="">
         </div>
-        <div class="f-contact">
-          <div class="f-icon">
-            <i class="fas fa-ellipsis-h"></i>
-            <h1>CONTATCT</h1>
-          </div>
-          <div class="f-cdesc">
-                <h3>+45 123456</h3>
-                <h3>123@gmail.com</h3>
-                <h3>Norrebro, Copenhagen</h3>
-                <h3>CVRno. -----</h3>
-          </div>
-        </div>
-        <div class="f-offer">
-          <div class="f-icon">
-            <i class="fas fa-ellipsis-h"></i>
-            <h1>Our services</h1>
-          </div>
-          <div class="f-odesc">
-            <h3>Dishwahers</h3>
-            <h3>Dishwahers</h3>
-            <h3>Dishwahers</h3>
-            <h3>Dishwahers</h3>
-          </div>
+        <div class="f-desc">
+          <h3>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</h3>
         </div>
       </div>
-      </footer>
+      <div class="f-contact">
+        <div class="f-icon">
+          <i class="fas fa-ellipsis-h"></i>
+          <h1>CONTATCT</h1>
+        </div>
+        <div class="f-cdesc">
+          <h3>+45 22247478</h3>
+          <h3>info@gsaps.dk</h3>
+          <h3>Frederikssundsvej 272, 2700  Brønshøj</h3>
+          <h3>CVRno. 41896760</h3>
+        </div>
+      </div>
+      <div class="f-offer">
+        <div class="f-icon">
+          <i class="fas fa-ellipsis-h"></i>
+          <h1>Our services</h1>
+        </div>
+        <div class="f-odesc">
+          <h3>Cleaner</h3>
+          <h3>Dishwahers</h3>
+          <h3>Hotel service</h3>
+          <h3>Restaurant service</h3>
+        </div>
+      </div>
+    </div>
+    </footer>
 </body>
 <script type="module" src="/main.js"></script>
 <script type="module" src="/navi.js"></script>
