final changes again

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,24 @@
                     </div>
                     <button id="c-submit" class="c-btn">Submit</button>
                 </form>
+
+                <div class="form-submit-c hidden">
+                  <div class="c-s">
+
+                    <div class="c-icon">
+
+                      <input  type="button" class="close" value="✕" onclick="refreshPage()" />
+                    </div>
+                    <div class="c-info">
+
+                      <h2 class="c-d">Your information has been received.
+                        We will contact you in 1 or 2 business days.
+                        Thankyou.
+                      </h2>
+                    </div>
+                   
+                  </div>
+                </div>
             </div>
             </div>
 
