--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <div class="ch ch-1"><h3>Affordable price</h3></div>
               <div class="ch ch-2"><h3>Quality job</h3></div>
               <div class="ch ch-3"><h3>Experienced staffs</h3></div>
-              <div class="ch ch-4"><h3>Punctual</h3></div>
+              <div class="ch ch-4"><h3>Reliable</h3></div>
               <div class="ch ch-5"><h3>Punctual</h3></div>
             </div>
           </div>
@@ -131,7 +131,7 @@
               </div>
               <div class="q-desc">
                 <h1>DO YOU HAVE A QUESTION?</h1>
-                <p>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</p>
+                <p>Do you have any questions regrading our services? Feel free to contact us.</p>
                 <button class="q-button"><a href="contact.html" class="e-a">Contact Us</a></button>
 
               </div>
@@ -143,7 +143,9 @@
               </div>
               <div class="j-desc">
                 <h1>CAREER OPPURTUNITIES</h1>
-                <p>GS ApS is the company who will take care of your work. Professional Service and Fair Price.</p>
+                <p>Do you want be a part of our team and work with us?
+                  Fill out the job application and we will contact you.
+                </p>
                 <button class="j-button"><a href="job.html" class="e-a">More about jobs</a> </button>
               </div>
             </div>
