--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                         <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span>
                     </div>
                     <div class="form-group">
-                        <label for="number">Number</label>
+                        <label for="number">Phone</label>
                         <input id="number" type="number" name="number" />
                         <!-- <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span> -->
                     </div>
