secind final changes

--- a/job.html
+++ b/job.html
@@ -20,7 +20,7 @@
             <ul class="mobile-menu slide-out display-none">
                 <li><a href="index.html">Home</a></li>
                 <li> <a href="service.html">Service</a></li>
-                <li><a href="#" class="active">Job</a></li>
+              <!--   <li><a href="#" class="active">Job</a></li> -->
                 <li><a href="about.html">About us</a></li>
                 <li><a href="contact.html">contact</a></li>
        
@@ -29,13 +29,13 @@
           <nav>
             <div class="nav-wrap">
               <a href="#" class="logo">
-                <img src="/GSAPS_NEWLOGO.png" alt="" srcset="">
+                <img src="/gsapsnl.png" alt="" srcset="">
               </a>
               <div class="nav-right">
                 <ul class="desktop-menu">
                   <li><a href="index.html">Home</a></li>
                   <li> <a href="service.html">Service</a></li>
-                  <li><a href="#" class="active">Job</a></li>
+                  <!-- <li><a href="#" class="active">Job</a></li> -->
                   <li><a href="about.html">About us</a></li>
                   <li><a href="contact.html">contact</a></li>
                   <li><button class="button_nav">+45 123456</button></li>
@@ -47,7 +47,7 @@
     <main>
         <h1 class="j-heading">JOB</h1>
         <div id="job-desc">
-            <div class="j-img"><img src="/team2.png" alt="" srcset="">  </div>
+            <div class="j-img"><img src="/lfj.png" alt="" srcset="">  </div>
             <div class="j-info"><h1>Do you want to join us?</h1>
             <p>Be a part of our team and work with us.We provide good salary with flexible working times and good working enviroment.</p>
         <p>If you are interested, please fill out the below form </p>
@@ -63,7 +63,7 @@
                         <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span>
                     </div>
                     <div class="form-group">
-                        <label for="number">Number</label>
+                        <label for="number">Phone</label>
                         <input id="number" type="number" name="number" />
                         <!-- <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span> -->
                     </div>
@@ -78,8 +78,8 @@
                         <input id="age" type="number" name="age" required />
                     </div>
                     <div class="form-group">
-                        <label for="cpr">CPR number</label>
-                        <input id="cpr" type="number" name="cpr"  />
+                        <label for="desc">About  you</label>
+                        <input id="desc" type="text" name="desc" placeholder="Tell us about yourself"  />
                         <!-- <span id="error-1" class="error hidden">Name is required. Please, enter your name.</span> -->
                     </div>
                     <div class="form-group">
