--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@ Feel free to contact us if you have any questions.
   <div class="f-contact">
     <div class="f-icon">
       <i class="fas fa-ellipsis-h"></i>
-      <h1>CONTATCT</h1>
+      <h1>CONTACT</h1>
     </div>
     <div class="f-cdesc">
       <h3>+45 22247478</h3>
