--- a/service.html
+++ b/service.html
@@ -113,7 +113,7 @@
         <div class="f-contact">
           <div class="f-icon">
             <i class="fas fa-ellipsis-h"></i>
-            <h1>CONTATCT</h1>
+            <h1>CONTACT</h1>
           </div>
           <div class="f-cdesc">
             <h3>+45 22247478</h3>
